@@ -58,26 +58,7 @@
     <delete dir="${dist}"/>
   </target>
 	
-	<!--
-	<target name="test">
-		
-		<path id="test.classpath">
-		  <pathelement location="${build}" />
-		  <pathelement location="${lib}/testng-6.8.jar" />
-		  <fileset dir="${lib}">
-		    <include name="**/*.jar"/>
-		  </fileset>
-		</path>
-		
-		<antcall target="compile" />
-		
-		<junit fork="yes" haltonfailure="yes">
-	    <test name="${test.class.name}" />
-	    <formatter type="plain" usefile="false" />
-	    <classpath refid="test.classpath" />
-	  </junit>
-	</target>
-	-->
+	
 	<target name="ykTest">		
 		<antcall target="testee">
 			<param name="projecttest.suite.location" value="TesteGit/suites/"/>
@@ -89,33 +70,11 @@
 	<target name="testee" depends="compile" description="Run the tests">
 		
 			<taskdef classpathref="test.classpath" resource="testngtasks" />		 		
-			<!--<classpath refid="test.classpath" /> -->
-			<!--<taskdef resource="testngtasks" classpath="lib/jcommander-1.29.jar"  />-->
-			<testng >
-				<!--<xmlfileset dir="../${projecttest.suite.location}/" includes="${projecttest.suite}"/> -->
-				<xmlfileset dir="suites/" includes="testng.xml"/>
-	<!--			
-				<jvmarg value="-Dsun.lang.ClassLoader.allowArraySyntax=true"/>
-				<jvmarg value="-Xms256m"/>
-				<jvmarg value="-Xmx1024m"/>
-				<jvmarg value="-XX:MaxPermSize=512m"/>
-				<jvmarg value="-Dfile.encoding=UTF-8"/>
+			
+			<testng classpathref="test.classpath" >
+				<xmlfileset dir="../${projecttest.suite.location}/" includes="${projecttest.suite}"/> 
+				<!-- <xmlfileset dir="suites/" includes="testng.xml"/> -->
 	
-				<jvmarg value="-Demma.coverage.out.file=${emma.metadata.dir}/coverage.emma"/>
-		
-				<xmlfileset dir="../${projecttest.suite.location}/" includes="${projecttest.suite}"/>
-				    
-	
-				<classpath>
-				    <path refid="build.classpath.test" />
-				    <path refid="emma.lib" />
-					<pathelement location="../${projectweb.name}/WebContent/" />
-					<pathelement location="../${projectworker.name}/WebContent/" />
-					<pathelement path="${core.dir}" />
-					<pathelement path="${test.dir}" />
-					
-				</classpath>
-	-->
 			</testng>
 
 		</target>
